update folder hierarchy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,8 @@ jobs:
             scripts/ \
             styles/ \
             lang/ \
-            assets/
+            assets/ \
+            templates/
 
       - name: Upload release assets
         env:
