--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           zip -r module.zip \
             module.json \
+            README.md \
             scripts/ \
             styles/ \
             lang/ \
